# freeiam

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.dev.md  README.md  REUSE.toml  create_sync.sh  ldapserver  pyproject.toml  pytest.ini  pytest_benchmark.ini  tox.ini
.github/workflows/: ci.yml  pre-commit.yml  release.yml
assets/logo/: README.md
benchmarks/: test_search.py
docs/: Makefile  _substitutions.rst  conf.py  index.rst  ldap_examples.rst
docs/examples/: auth.py  connection.py  controls.py  crud.py  dn.py  extended.py  filter.py  ldap_authentication.rst  ldap_connection.rst  ldap_controls.rst  ldap_crud.rst  ldap_dn.rst  ldap_extended.rst  ldap_filter.rst  ldap_information.rst  ldap_options.rst  ldap_search.rst  ldap_synchronous.rst  options.py  search.py  sync.py
docs/modules/: errors.rst  ldap.rst  ldap_connection.rst  ldap_constants.rst  ldap_controls.rst  ldap_dn.rst  ldap_filter.rst
src/freeiam/: errors.py
src/freeiam/ldap/: _wrapper.py  attr.py  connection.py  constants.py  controls.py  dn.py  extended_operations.py  filter.py  schema.py  sync_connection.py
stubs/: _ldap.pyi  ldapurl.pyi  ldif.pyi
stubs/ldap/: __init__.pyi  _ldap.pyi  asyncsearch.pyi  cidict.pyi  constants.pyi  dn.pyi  filter.pyi  functions.pyi  ldapobject.pyi  logger.pyi  modlist.pyi  resiter.pyi  sasl.pyi  syncrepl.pyi  types.pyi
stubs/ldap/controls/: __init__.pyi  deref.pyi  libldap.pyi  openldap.pyi  pagedresults.pyi  ppolicy.pyi  psearch.pyi  pwdpolicy.pyi  readentry.pyi  sessiontrack.pyi  simple.pyi  sss.pyi  vlv.pyi
stubs/ldap/extop/: __init__.pyi  dds.pyi  passwd.pyi
stubs/pyasn1/codec/ber/: decoder.pyi  encoder.pyi
stubs/pyasn1/type/: base.pyi  namedtype.pyi  univ.pyi
tests/: conftest.py  test_ldap_connection.py  test_ldap_connection_sync.py  test_ldap_controls.py  test_ldap_dn.py  test_ldap_filter.py  test_ldap_various.py
tests/certs/: ca.crt  ca.key  dhparam.pem  ldap.crt  ldap.key
tests/entrypoint/: constraint.sh  dds.sh  memberof.sh  refint.sh  sssvlv.sh  syncprov.sh  unique.sh  usn.sh
tests/ldifs/: base.ldif  users.ldif
